src/atoms/toggle/toggle.scss
$toggleWidth: 56px;
$toggleFrameWidth: 60px;
$toggleBackgroundHeight: 24px;
$toggleDimension: 32px;

.atm-toggle {
  display: block;
  margin: pxToRem($sizeRegular) 0;
  cursor: pointer;

  &__label {
    padding-left: pxToRem($toggleWidth + $sizeSmallRegular);
    position: relative;
    cursor: pointer;
    display: block;

    &:before,
    &:after {
      display: block;
      content: '';
      position: absolute;

      top: 0;
    }

    &:before {
      width: pxToRem($toggleWidth);
      height: pxToRem($toggleBackgroundHeight);
      border-radius: pxToRem($toggleBackgroundHeight / 2);

      background: $colorBlack20;
      left: 0;

      top: 50%;
      transform: translateY(-50%);

      @include transition(background);
    }

    &:after {
      width: pxToRem($toggleDimension);
      height: pxToRem($toggleDimension);

      border: 2px solid $colorBlack20;
      left: 0;
      top: 50%;
      transform: translateY(-50%);
      background: $colorWhite;
      border-radius: 100%;

      @include transition(border-color left);
    }
  }

  input {
    opacity: 0;
    position: absolute;
    height: pxToRem($sizeBiggerBig);
    width: pxToRem($toggleFrameWidth);
    margin-top: - pxToRem($sizeTiny);
    z-index: 1;
  }

  input:checked + &__label {
    &:before {
      background: $colorCyan;
    }

    &:after {
      left: pxToRem($toggleWidth - $toggleDimension);
      border-color: $colorCyan;
    }
  }
}

